# dronedance

./: .gitignore  README.md  build.gradle  dependencies.gradle  gradle.properties  settings.gradle
.github/workflows/: android-ci.yml  dronedance-ci.yml
android-sdk-v5-uxsdk/: build.gradle
android-sdk-v5-uxsdk/src/main/: AndroidManifest.xml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.txt  dance_0.txt  dance_1.txt  dance_2.txt  dance_3.txt  dance_4.txt  dance_5.txt  dance_6.txt  starting_positions.txt
app/src/main/cpp/: CMakeLists.txt  fastimglib.cpp
app/src/main/java/sk/uniba/krucena/: Communication.kt  Config.kt  DJIAircraftApplication.kt  Dance.kt  LiveFragment.kt  LiveStreamVM.kt  MSDKManagerVM.kt  MainActivity.kt  MyApplication.kt  NativeBridge.kt  OverlayView.kt
app/src/main/res/layout/: activity_main.xml  frag_live.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml
dbg/: random_links.txt  visu.html
gradle/wrapper/: gradle-wrapper.properties
trajectory-generation/krucena/: CIRCLE_DOWN_1M  CIRCLE_DOWN_1M8  CIRCLE_LEVEL_CCW  CIRCLE_LEVEL_CW  CIRCLE_UP_1M  CIRCLE_UP_1M8  DOWN_12_1M8  DOWN_14_1M8  DOWN_34_1M8  ONEQ_LEVEL  THREEQ_LEVEL  TWOQ_LEVEL  VERTICAL_FWD  VERTICAL_RIGHT  circle.c
trajectory-generation/nes/: FLY_DOWN  FLY_UP  HORIZONTAL_HALF_LOOP_CCW  HORIZONTAL_LOOP_CCW  HORIZONTAL_LOOP_CW  REVERSE_RIDE_11_16  RIDE_11_16  VERTICAL_HALF_LOOP_NORTH  VERTICAL_LOOP_NORTH  VERTICAL_LOOP_SOUTH  circle.c
